fix alignment of the icon and group indicator

--- a/src/main/frontend/pipeline-console-view/pipeline-console/main/data-tree-view.scss
+++ b/src/main/frontend/pipeline-console-view/pipeline-console/main/data-tree-view.scss
@@ -1,4 +1,6 @@
 $pgv-tree-item-toggle-size: 1rem;
+$pgv-icon-size: 1.375rem;
+$pgv-item-padding-inline: 0.7rem;
 
 .pgw-filter-bar {
   position: relative;
@@ -60,12 +62,7 @@ $pgv-tree-item-toggle-size: 1rem;
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
-}
-
-.pgv-tree-group {
-  @extend .pgv-tree;
-  margin-left: 1rem;
+  gap: 0.125rem;
 }
 
 .pgv-tree-stage {
@@ -83,7 +80,7 @@ $pgv-tree-item-toggle-size: 1rem;
   align-items: center;
   gap: 0.65rem;
   width: 100%;
-  padding: 0.5rem 0.7rem 0.5rem 0.5rem;
+  padding: 0.5rem $pgv-item-padding-inline;
   border-radius: var(--form-input-border-radius);
   position: relative;
 
@@ -223,13 +220,13 @@ $pgv-tree-item-toggle-size: 1rem;
   align-items: center;
 
   svg {
-    width: 1.375rem;
-    height: 1.375rem;
+    width: $pgv-icon-size;
+    height: $pgv-icon-size;
   }
 }
 
 .pgv-tree-children {
-  padding-left: 20px;
+  padding-left: calc(/*$pgv-item-padding-inline +*/ $pgv-item-padding-inline + $pgv-icon-size);
   position: relative;
   display: flex;
   flex-direction: column;
@@ -240,7 +237,7 @@ $pgv-tree-item-toggle-size: 1rem;
     top: 0.375rem;
     bottom: 0.375rem;
     // TODO - var fallback can removed after baseline is moved >= 2.496
-    left: calc(1rem + var(--jenkins-border-width, 2px));
+    left: calc($pgv-item-padding-inline + ($pgv-icon-size / 2) - (var(--jenkins-border-width, 2px) / 2));
     // TODO - var fallback can removed after baseline is moved >= 2.496
     background-color: var(
       --jenkins-border-color,
